First iteration of splash page

--- a/HCIProject/app/src/main/res/values/strings.xml
+++ b/HCIProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">HCI Project</string>
+    <string name="app_name">DrinksPal</string>
+    <string name="left_right">Tilt Left or Right</string>
+    <string name="first_message">Shake for something wild!!!</string>
 </resources>
