--- a/HCIProject/app/src/main/res/values/strings.xml
+++ b/HCIProject/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">DrinksPal</string>
     <string name="left_right">Tilt Left or Right</string>
     <string name="first_message">Shake for something wild!!!</string>
+    <string-array name="drinks_type">
+        <item>Spirit</item>
+        <item>Wine</item>
+        <item>Beer</item>
+        <item>Whiskey</item>
+    </string-array>
 </resources>
