--- a/HCIProject/app/src/main/res/values/strings.xml
+++ b/HCIProject/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DrinksPal</string>
     <string name="left_right">TILT LEFT FOR BARS\n RIGHT FOR DRINKS</string>
-    <string name="first_message">SHAKE FOR SOMETHING\nWILD!</string>
+    <string name="first_message">SHAKE FOR RANDOM\nBAR!</string>
+    <string name="main_background_img">Beer Photo</string>
 </resources>
